# marivo

./: .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  QUALITY_TOOLS.md  README.md  README.zh-CN.md  TODOS.md  agent-guide.md  factum.example.yaml  marivo.example.yaml  marivo.spec  omnidb.example.yaml  omnidb.yaml  pyproject.toml  pytest.ini  setup.py  snapshot-catalog.yaml
.agents/: memory.md
.codex/: config.toml
.github/: copilot-instructions.md
.playwright-cli/: page-2026-03-11T15-40-55-317Z.yml  page-2026-03-11T15-41-01-877Z.yml  page-2026-03-11T15-41-20-276Z.yml  page-2026-03-11T15-41-42-463Z.yml  page-2026-03-11T15-42-00-108Z.yml  page-2026-03-11T15-42-25-030Z.yml  page-2026-03-11T16-49-25-201Z.yml  page-2026-03-11T16-49-39-177Z.yml  page-2026-03-11T16-50-22-397Z.yml  page-2026-03-11T16-50-32-255Z.yml  page-2026-03-11T16-50-38-232Z.yml  page-2026-03-11T16-50-38-690Z.yml  page-2026-03-11T16-52-05-367Z.yml  page-2026-03-11T16-52-56-551Z.yml  page-2026-03-11T16-53-04-415Z.yml  page-2026-03-11T16-53-28-176Z.yml  page-2026-03-11T16-54-09-526Z.yml  page-2026-03-11T16-57-02-817Z.yml  page-2026-03-11T17-49-22-502Z.yml
aoi-spec/: CHANGELOG.md  README.md  spec.md
app/: approvals.py  bindings.py  catalog_query.py  config.py  database.py  datasources.py  dialect.py  engines.py  evidence.py  governance.py  jobs.py  main.py  mappings.py  mcp_client.py  mcp_server.py  models.py  observability.py  planning.py  routing.py  runtime_contracts.py  semantic.py  service.py  source_object_locator.py  sources.py  sync.py  time_axis_metadata.py  time_contracts.py  time_scope.py  ui.py
app/api/: deps.py  (+23 more)
data/: mvp.meta.sqlite
docs/: README.md  agent-guide.md  architecture-invariants.md  confidence_calibration.md  factum-for-builders.zh.md  factum-proposal.md  marivo-for-builders.zh.md  marivo-proposal.md  omnidb-design-doc.md  omnidb-design-doc.zh.md  omnidb-improvement-roadmap.md  omnidb-module-refactor-checklist.md  omnidb-phase1-implementation-task-list.md  omnidb-phase2-implementation-task-list.md  omnidb-phase3-design-doc.md  omnidb-phase3-implementation-task-list.md  omnidb-phase4-design-doc.md  omnidb-phase4-implementation-task-list.md  omnidb-phase5-design-doc.md  omnidb-phase5-implementation-task-list.md  omnidb-vnext-architecture-blueprint.md  todo-legacy-import-debt.md
duckdb_agentic_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
factum-mcp/: README.md  pyproject.toml
factum-mcp/docs/: release-checklist.md
factum-mcp/src/factum_mcp/: __init__.py  config.py  http_client.py  inventory.py  models.py  sdk.py  server.py  smoke.py
factum-mcp/src/factum_mcp/resources/: __init__.py
factum-mcp/src/factum_mcp/tools/: __init__.py
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
marivo/: __init__.py  __main__.py  cli.py  config.py  datasources.py  doctor.py  identity.py  main.py  metric_inputs.py  observability.py  preview.py  project.py  redaction.py  refs.py  render.py  routing.py  runtime_contracts.py  source_object_locator.py  time_axis_metadata.py  time_contracts.py  time_scope.py
marivo-mcp/: README.md  pyproject.toml
marivo-mcp/docs/: release-checklist.md
marivo-mcp/src/marivo_mcp/: __init__.py  config.py  diagnostics.py  http_client.py  init_cli.py  inventory.py  models.py  openapi_cache.py  sdk.py  server.py  smoke.py  target_resolution.py
marivo-mcp/src/marivo_mcp/resources/: __init__.py
marivo-mcp/src/marivo_mcp/tools/: __init__.py
omnidb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
osi-marivo-spec/: CHANGELOG.md  README.md  spec.md
plan/: 2026-04-25-mysql-metadata-todo-task-list.zh.md  analysis-workflow-architecture.md  backlog-causal-inference-gaps.md  compare-metric-single-window-implementation-plan.md  evidence-engine-attribution-improvements.md  evidence-engine-enhancement-roadmap.md  factum-agent-analysis-gap-roadmap.zh.md  factum-agent-analysis-ux-bug-list.zh.md  factum-analysis-refactor-plan.zh.md  factum-design-doc.zh.md  factum-evidence-pipeline-spec-gaps.zh.md  factum-issues-from-bi-load-analysis.md  factum-issues-from-oneservice-analysis.md  factum-issues.md  factum-vnext-architecture-blueprint.md  fix-gap-1.md  g1-correlate-metrics-implementation-plan.md  improvement-roadmap.md  omnidb-design-doc.md  omnidb-design-doc.zh.md  omnidb-vnext-architecture-blueprint.md  plan-design.md  step-design-principles.md  task-list.md  time-scope-unification-rfc.md  time-scope-unification-task-list.md
scripts/: _pyinstaller_entry.py  build_cn_calendar.py  generate_contract_models.py  install-marivo.sh  require-venv.sh  reset-metadata-sqlite.sh  run_skill_examples.py  upload_html_report.py
site/: astro.config.mjs  package-lock.json  package.json
tests/: conftest.py  finding_identity_testutil.py  install_marivo_helpers.py  ref_helpers.py  semantic_test_helpers.py  shared_fixtures.py  test_adapters.py  test_additivity_capabilities.py  test_additivity_constraints.py  test_agent_api_drift.py  test_agent_result_protocol.py  test_agent_skills.py  test_aggregate_extractor.py  test_aggregate_query.py  test_analysis_agent_facing_phase3.py  test_analysis_artifact_protocol.py  test_analysis_assess_quality.py  test_analysis_attribute.py  test_analysis_backend_cache.py  test_analysis_calendar_loader.py  test_analysis_candidate_columns.py  test_analysis_candidate_followups.py  test_analysis_candidate_select.py  test_analysis_capability_registry.py  test_analysis_compare.py  test_analysis_compare_calendar.py  test_analysis_compare_panel.py  test_analysis_compare_segmented.py  test_analysis_component_compare_decompose.py  test_analysis_core_operator_surface_phase2.py  test_analysis_correlate.py  test_analysis_cross_session.py  test_analysis_cumulative_intents.py  test_analysis_cumulative_observe.py  test_analysis_cumulative_sql_compile.py  test_analysis_datasource_secrets.py  test_analysis_decompose.py  test_analysis_decompose_panel.py  test_analysis_decompose_signature.py  (+607 more)
(+2259 files in other folders)
