[project]
name = "factum"
version = "0.2.0"
description = "Semantic layer platform with pluggable metadata stores, analytics engines, and catalog adapters."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
trino = ["trino>=0.330"]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",
    "pytest-cov>=5.0",
    "ruff>=0.3.0",
    "mypy>=1.9",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "TC001",  # Move application import into TYPE_CHECKING (breaks FastAPI dependency injection)
    "TC002",  # Move third-party import into TYPE_CHECKING (breaks FastAPI)
    "TC003",  # Move standard library import into TYPE_CHECKING (breaks runtime)
    "RUF001", # Ambiguous unicode character (intentional use of Greek letters)
    "RUF002", # Ambiguous unicode character in docstring (intentional)
    "N802",   # Function name should be lowercase (some test helpers use camelCase)
    "N806",   # Variable in function should be lowercase (some constants use UPPER_CASE)
    "F841",   # Local variable assigned but never used (common in test setup)
    "E731",   # Do not assign lambda (sometimes clearer than def)
    "B007",   # Loop variable not used (common in test fixtures)
    "B017",   # assertRaises(Exception) is too broad (acceptable in tests)
    "RUF003", # Ambiguous unicode comment character
    "RUF059", # Consider dict.get for default values
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "RUF012"]  # allow assert and mutable class attributes in tests
"app/api/**/*.py" = ["B008"]  # allow function calls in FastAPI defaults

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
