[project]
name = "marivo"
version = "0.1.0"
description = "Semantic layer platform with pluggable metadata stores, analytics engines, and catalog adapters."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "mcp>=1.0.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
mysql = ["PyMySQL>=1.1"]
trino = ["trino>=0.330"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3",
    "pytest-cov>=5.0",
    "ruff>=0.3.0",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
    "import-linter>=2.0",
]
test-mysql = ["testcontainers[mysql]"]

[project.scripts]
marivo = "app.cli:main"
marivo-stdio = "app.transports.mcp.stdio:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "mysql: tests requiring a MySQL container",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "TC001",  # Move application import into TYPE_CHECKING (breaks FastAPI dependency injection)
    "TC002",  # Move third-party import into TYPE_CHECKING (breaks FastAPI)
    "TC003",  # Move standard library import into TYPE_CHECKING (breaks runtime)
    "RUF001", # Ambiguous unicode character (intentional use of Greek letters like ρ)
    "RUF002", # Ambiguous unicode character in docstring (intentional)
    "RUF003", # Ambiguous unicode comment character (intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # allow assert in tests
    "RUF012",  # allow mutable class attributes in tests
    "N802",    # allow non-lowercase function names (test helpers)
    "F841",    # allow unused variables (test setup)
    "E731",    # allow lambda assignments (test fixtures)
    "B007",    # allow unused loop variables
    "B017",    # allow assertRaises(Exception)
    "RUF059",  # allow unused unpacked variables
]
"app/api/**/*.py" = ["B008"]  # allow function calls in FastAPI defaults

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
