[project]
name = "marivo"
version = "0.1.0"
description = "Python-native semantic modeling and analysis library for agentic analytics."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "li chengxiang", email = "chengxiang.libra@gmail.com" },
]
keywords = ["semantic-layer", "analytics", "duckdb", "python-library"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ibis-framework>=12.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
    "scipy>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/lumendata/marivo"
Repository = "https://github.com/lumendata/marivo"
Issues = "https://github.com/lumendata/marivo/issues"

[project.optional-dependencies]
duckdb = ["duckdb>=1.2.2", "pyarrow>=15.0.0", "pyarrow-hotfix>=0.6"]
mysql = ["PyMySQL>=1.1"]
trino = ["trino>=0.330"]
all = [
    "duckdb>=1.2.2",
    "pyarrow>=15.0.0",
    "pyarrow-hotfix>=0.6",
    "PyMySQL>=1.1",
    "trino>=0.330",
]
dev = [
    "duckdb>=1.2.2",
    "pyarrow>=15.0.0",
    "pyarrow-hotfix>=0.6",
    "pytest>=8",
    "pytest-xdist>=3",
    "pytest-cov>=5.0",
    "ruff>=0.3.0",
    "mypy>=1.9",
    "numpy>=1.26.0",
    "pandas-stubs>=2.2.0",
    "scipy-stubs>=1.14.1.0",
    "import-linter>=2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["marivo*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "TC001",  # Keep runtime imports when annotations are also runtime values.
    "TC002",  # Keep third-party imports when modules use runtime type metadata.
    "TC003",  # Keep standard-library imports readable in implementation modules.
    "RUF001", # Ambiguous unicode character (intentional use of Greek letters like ρ)
    "RUF002", # Ambiguous unicode character in docstring (intentional)
    "RUF003", # Ambiguous unicode comment character (intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # allow assert in tests
    "RUF012",  # allow mutable class attributes in tests
    "N802",    # allow non-lowercase function names (test helpers)
    "F841",    # allow unused variables (test setup)
    "E731",    # allow lambda assignments (test fixtures)
    "B007",    # allow unused loop variables
    "B017",    # allow assertRaises(Exception)
    "RUF059",  # allow unused unpacked variables
]

[tool.ruff.lint.isort]
known-first-party = ["marivo"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["ibis.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["marivo"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
